--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,24 @@
-
-/* Your CSS Code here. */
+nav{
+	background-color: #7F7E7E;
+	width: 100vw;
+	height: 50px;
+	text-align: center;
+	padding-top: 13px;
+}
+nav > a{
+	text-decoration: none;
+	font-size: 23px;
+	padding: 15px;
+	color: white;
+}
+h2{
+	text-align: center;
+}
+ul{
+	list-style: none;
+}
+ul>li>video{
+	width: 300px;
+	margin-left: 120px;
+	padding: 20px;
+}
