--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,9 @@ nav{
 	text-align: center;
 	padding-top: 13px;
 }
-nav > a{
+nav>ul>li > a{
 	text-decoration: none;
 	font-size: 23px;
-	padding: 15px;
 	color: white;
 }
 h2{
